# cpp-engine

./: .gitignore  .gitmodules  Assets.7z  CMakeLists.txt  CMakeLists2.txt  CMakePresets.json  CONTRIBUTING.md  README.md  bin.7z
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
Assets/: skybox_vertex.glvs
Assets/Blocks/: default_block_file.yaml
Assets/Materials/: default_3d_mat.yaml  default_voxel_material.yaml
Assets/Meshes/: half-cube.dae  hedge.dae  lamp-base.dae  lamp-bend.dae  (+7 more)
Config/: Config.h
Drawing/: Camera.cpp  GLRen.cpp  GLRen.h  GeoStore.cpp  GeoStore.h  GeometryGeneration.cpp  GeometryGeneration.h  Graphics1.cpp  Graphics1.h  Graphics2D.h  IRen3D.h  Image.cpp  Image.h  Particles.cpp  TextDrawing.cpp  TextDrawing.h
Example Config/: WindowConfig.txt  example_shader_program.prog  uiconfig.xml  windowconfig - 1.xml  windowconfig.xml
GLSL/: 3D.glfs  3D.glvs  3DFog.glfs  3DI.glvs  Particles.glfs  Particles.glvs  Projectile.glfs  Projectile.glvs  bulletdebug.glfs  bulletdebug.glvs  draw.glfs  draw.glvs  image.glfs  image.glvs
Game/: GameEngine.cpp  GameEngine.h  Progress.h
Helpers/: BrushHelper.cpp  BrushHelper.h  BulletHelper.cpp  EnumHelper.h  ExceptionHelper.h  GLHelper.h  IteratorHelper.h  ProfileHelper.cpp  ProfileHelper.h  StringHelper.cpp  TransferHelper.h  VectorHelper.h
Imported/: Level1.cpp  Level1.h
Structure/: BasicGSpace.cpp  BasicGSpace.h  BasicShapes.h  BirdyShapes.cpp  BirdyShapes.h  BulletCollisionListener.cpp  BulletCollisionListener.h  PerviousShapes.h  PhysicsSpace.h  PuzzleShapes.h  TestShapes.cpp  TestShapes.h
Systems/: Thing.h
UI/: UI1.h  UIBox.h  UIConfig.txt  UIDebugInfo.h  UIPositioner.h  UIScrollAbsorber.h  UITextBox.h
src/: Main.cpp
src/Engine/: CMakeLists.txt
src/Engine/Config/: Config.cpp  Config.h
src/Engine/Drawing/: AtlasTypes.h  BindingManager.cpp  CMakeLists.txt  Camera.cpp  Camera.h  CubeMap.cpp  CubeMap.h  DrawCall.cpp  DrawCall.h  DrawCallReference.cpp  DrawCallReference.h  FrameBuffer.cpp  FrameBuffer.h  FreeMaterials.h  Frustum.cpp  Frustum.h  GLRen.cpp  GLRen.h  GLRen2.cpp  GLRen2.h  Geometry.cpp  Geometry.h  GeometryDescription.h  GeometryGeneration.cpp  GeometryReference.cpp  GeometryReference.h  GeometryStore.cpp  GeometryStore.h  Graphics1.cpp  Graphics1.h  Graphics2D.cpp  Graphics2D.h  Graphics3D.cpp  Graphics3D.h  IRen3D.h  IRen3Dv2.h  Image.cpp  Image.h  Image2DArray.cpp  Image2DArray.h  (+17 more)
src/Engine/Drawing/Effects/: Flickerer.cpp  Flickerer.h
src/Engine/Game/: CMakeLists.txt  GameEngine.cpp  Progress.h
src/Engine/Game/Scene/: BasicScene.h  StageScene.h  StartingScene.cpp  StartingScene.h  VoxelScene.cpp  VoxelScene.h
src/Engine/Game/Stages/: PrecipiceStages.h
src/Engine/Game/UI/: GameUI.cpp  GameUI.h  OptionsUI.cpp  OptionsUI.h
src/Engine/Game/VoxelStuff/: SkyBoxShape.cpp  VoxelAbility.cpp  VoxelAbility.h  VoxelChunk.cpp  VoxelChunk.h  VoxelCube.cpp  VoxelCube.h  VoxelDamage.h  VoxelEntity.h  VoxelMemoryLevel.cpp  VoxelMemoryLevel.h  VoxelPlayer.cpp  VoxelPlayer.h  VoxelPlayerUI.h  VoxelTypes.cpp  VoxelTypes.h  VoxelValues.h  VoxelWorld.cpp  VoxelWorld.h  VoxelWorld.h1
src/Engine/Game/VoxelStuff/Entities/: Ball.cpp  HelpfulThing.h  VoxelProjectiles.h
src/Engine/Helpers/: BulletHelper.h  DebugHelper.cpp  DebugHelper.h  DebugPrintHelper.cpp  DebugPrintHelper.h  DrawingHelper.cpp  DrawingHelper.h  ExceptionHelper.h  FileHelper.cpp  GLHelper.cpp  GLHelper.h  GSpaceHelper.cpp  GSpaceHelper.h  IntVectorHelper.h  MathHelper.h  MeshHelper.cpp  MeshHelper.h  PointerHelper.h  ProfileHelper.cpp  ProfileHelper.h  SDLHelper.cpp  SDLHelper.h  StringHelper.cpp  StringHelper.h  TestHelper.cpp  TestHelper.h  TransferHelper.cpp  TransferHelper.h  VectorHelper.cpp  VectorHelper.h  YAMLHelper.h  btAlignedObjectArray.natvis
src/Engine/Math/: CMakeLists.txt  conversion.h  floaty.cpp  floaty.h  inty.h  matrix.cpp  matrix.h  quat4.cpp  quat4.h
src/Engine/Structure/: BasicGSpace.cpp  BasicGSpace.h  BasicShapes.cpp  BasicShapes.h  BirdyShapes.cpp  PerviousShapes.cpp  PerviousShapes.h  PerviousShit.h  PhysicsSpace.cpp  PhysicsSpace.h  PuzzleShapes.cpp  ShapeStore.cpp  TestShapes.cpp
src/Engine/Structure/Shapes/: SimpleRenderShape.cpp  SimpleRenderShape.h  SkyBoxShape.cpp  SkyBoxShape.h
src/Engine/Systems/Animation/: Animation.cpp
src/Engine/Systems/Audio/: Audio.cpp
src/Engine/Systems/Events/: Converter.h  Events.h  EventsBase.cpp  EventsBase.h  PhysicsEvent.h
src/Engine/Systems/Execution/: DudEngine.cpp  Engine.cpp  Engine.h  Scene.h
src/Engine/Systems/Importing/: SimpleMeshImport.cpp  SimpleMeshImport.h
src/Engine/Systems/Input/: Config1.cpp  Config1.h  Input.cpp  InputAttachment.h
src/Engine/Systems/Options/: Options.h
src/Engine/Systems/Requests/: Requestable.h  Requester.h
src/Engine/Systems/SDLWrapping/: SDLWrappers.cpp  SDLWrappers.h
src/Engine/Systems/Sequence/: ActionSequence.cpp  ActionSequence.h  TerminalSequence.h
src/Engine/Systems/Threading/: ThreadedQueue.h
src/Engine/Systems/Time/: Time.cpp  Time.h
src/Engine/Tests/: BasicTests.cpp  CMakeLists.txt  TestHelper.h
src/Engine/UI/: UI1.cpp  UI1.h  UIDebugInfo.cpp  UIMouseHold.cpp  UIMouseHold.h
src/Engine/UI/UIPresets/: UISidebar.cpp  UITextButton.cpp  UITextButton.h
src/Game/: CMakeLists.txt  GameEngine.cpp  Main.cpp  Parkour.cpp  Parkour.h  ParkourBlocks.cpp  ParkourBlocks.h  ParkourLevels.cpp  ParkourLevels.h  ParkourScene.cpp  ParkourScene.h  ParkourShapes.cpp  ParkourShapes.h  ParkourSignShape.cpp  ParkourSignShape.h  ParkourTorchShape.cpp  ParkourTorchShape.h  ParkourUI.cpp  ParkourUI.h  To Do.txt  icon.rc
src/Game/Scene/: StageScene.cpp  StartingScene.cpp  StartingScene.h  VoxelScene.cpp  VoxelScene.h
src/Game/Stages/: IntroStage.cpp
src/Game/VoxelStuff/: SkyBoxShape.cpp  SkyBoxShape.h  VoxelChunk.cpp  VoxelChunk.h  VoxelChunkCuller.cpp  VoxelCube.cpp  VoxelCube.h  VoxelInteractable.h  VoxelPlayer.cpp  VoxelPlayer.h  VoxelTypes.h  VoxelValues.h  VoxelWorld.cpp  VoxelWorld.cpp1  VoxelWorld.h
src/Game/VoxelStuff/Entities/: Ball.h
src/Tests/: CMakeLists.txt
(+155 files in other folders)
